--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
-	"appid": "wx42f88017198289b1",
+	"appid": "wx10170868e036e529",
 	"projectname": "litemall-wx",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
