--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
 	"appid": "wxf62044ea89bf2ba9",
-	"projectname": "litemall-wx",
+	"projectname": "龙龙优品",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"condition": {
